--- a/main.html
+++ b/main.html
@@ -4,9 +4,48 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Car Insurance Registration Form</title>
 </head>
 
 <body>
+	<h1>Car Insurance Registration Form</h1>
+
+	<form method="post" action="">
+		<label for="name">Name</label>
+	<input type="text" id="name" required><br>
+
+	<label for="email">Email</label>
+	<input type="email" id="email" required><br>
+
+	<label for="male">Male</label>
+	<input type="radio" name="gender" id="male" required>
+	<label for="female">Female</label>
+	<input type="radio" id="female" name="gender" required><br>
+
+	<label for="cars">Car Brands</label>
+	<select id="cars">
+		<option selected disabled>--Please choose an option--</option>
+		<option>BMW</option>
+		<option>Audi</option>
+		<option>Mercedez</option>
+		
+	</select><br>
+
+	<label for="carage">Car Age</label>
+	<input type="number" id="carage" required><br>
+
+	<label for="dop">Date of Purchase (dop)</label>
+	<input type="date" id="dop" required><br>
+
+	<label for="password">Password</label>
+	<input type="password" id="password" required><br>
+
+	<button type="submit">Submit</button>
+	
+		
+	</form>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
